Quorum3/Library/Tests/Actions/Pass/Return2ActionsBool.quorum
class Main
    action Main
        boolean a = true
        output bar(foo(a))
    end

    action foo (boolean a) returns boolean
        if a = true
            a = false
        else
            a = true
        end
        return a
    end

    action bar (boolean a) returns boolean
        if a = true
            a = false
        else
            a = true
        end
        return a
    end
end