Quorum3/Library/Tests/Actions/Fail/MissingReturn8.quorum
class Main 
    action Main
        Test()
    end

    action Test returns boolean
        if 1 = 1
            return false
        elseif 2 = 2
            return false
        else
        end
    end
end